@@ -2,6 +2,8 @@
 
 == Under Git control
 
+- 2023-06-21 Fix bash-ttt.bash; Update README.md
+- 2023-06-21 Add Perl version: cli-ttt and test_ttt.pl
 - 2023-03-12 Fix `op_newline`; Fix regexp escape
 - 2023-02-26 Fix slash escape (for ripgrep); Fix typo
 - 2023-02-24 Add "禮" `43w6` and "剪" `43lb`
